FINERACT-2152: Fix interest pause on the 1st day of the 1st period